@@ -14,6 +14,7 @@ RELEASE 1.0.0
 - Fix invalid X-Draft-Info on forwarded message draft (#1489587)
 - Fix regression in handling of 'attachments' result in message_compose hook (#1489627)
 - Fix issue where msgexport.sh printed the message to STDOUT instead of a file (#1489634)
+- Fix fatal error in database_attachments plugin under some conditions (#1489726)
 
 RELEASE 1.0-rc
 --------------
